--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -1,5 +1,7 @@
 # Copyright (c) 2014-2023, The Monero Project
 #
+# Copyright (c) 2024, The Datum Project
+#
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without modification, are
@@ -37,11 +39,11 @@ set(daemon_sources
 
 set(daemon_headers)
 
-monero_find_all_headers(daemon_private_headers "${CMAKE_CURRENT_SOURCE_DIR}")
+datum_find_all_headers(daemon_private_headers "${CMAKE_CURRENT_SOURCE_DIR}")
 
-monero_private_headers(daemon
+datum_private_headers(daemon
   ${daemon_private_headers})
-monero_add_executable(daemon
+datum_add_executable(daemon
   ${daemon_sources}
   ${daemon_headers}
   ${daemon_private_headers})
@@ -71,5 +73,5 @@ target_link_libraries(daemon
     ${Blocks})
 set_property(TARGET daemon
   PROPERTY
-    OUTPUT_NAME "monerod")
+    OUTPUT_NAME "datumd")
 install(TARGETS daemon DESTINATION bin)
